[feat] 수강생 목록 출력 기능 구현 (#16)